--- a/src/app/pages/evaluation-page/evaluation-page.component.html
+++ b/src/app/pages/evaluation-page/evaluation-page.component.html
@@ -400,14 +400,14 @@
 
                             <ng-container *ngSwitchCase="'CSS Technique'">
                               <div fxLayout="row" class="code_block">
-                                <pre fxFlex><code [highlight]="test.htmlCode.toString()"></code></pre>
+                                <pre fxFlex><code tabindex="0" [highlight]="test.htmlCode.toString()"></code></pre>
                               </div>
                             </ng-container>
 
                             <ng-container *ngSwitchDefault>
                               <div fxLayout="column">
                                 <div class="code_block">
-                                  <pre fxFlex="95" fxFlex.lt-md="90"><code [highlight]="test.htmlCode.toString()"></code></pre>
+                                  <pre fxFlex="95" fxFlex.lt-md="90"><code tabindex="0" [highlight]="test.htmlCode.toString()"></code></pre>
                                   <button mat-icon-button fxFlex (click)="openCodeDialog(test.htmlCode)"
                                           matTooltip="{{'EVALUATION_PAGE.report.result_code' | translate}}" aria-label="Open code dialog button">
                                     <mat-icon class="eyeicon" aria-hidden="true">visibility</mat-icon>
@@ -449,14 +449,14 @@
 
                             <ng-container *ngSwitchCase="'CSS Technique'">
                               <div fxLayout="row" class="code_block" >
-                                <pre fxFlex><code [highlight]="test.htmlCode.toString()"></code></pre>
+                                <pre fxFlex><code tabindex="0" [highlight]="test.htmlCode.toString()"></code></pre>
                               </div>
                             </ng-container>
 
                             <ng-container *ngSwitchDefault>
                               <div fxLayout="column" >
                                 <div fxLayout="row" class="code_block">
-                                  <pre fxFlex="95" fxFlex.lt-md="90"><code [highlight]="test.htmlCode.toString()"></code></pre>
+                                  <pre fxFlex="95" fxFlex.lt-md="90"><code tabindex="0" [highlight]="test.htmlCode.toString()"></code></pre>
                                   <button mat-icon-button fxFlex (click)="openCodeDialog(test.htmlCode)"
                                           matTooltip="{{'EVALUATION_PAGE.report.result_code' | translate}}" aria-label="Open code dialog button">
                                     <mat-icon class="eyeicon" aria-hidden="true">visibility</mat-icon>
@@ -498,14 +498,14 @@
 
                             <ng-container *ngSwitchCase="'CSS Technique'">
                               <div fxLayout="row" class="code_block" >
-                                <pre fxFlex><code [highlight]="test.htmlCode.toString()"></code></pre>
+                                <pre fxFlex><code tabindex="0" [highlight]="test.htmlCode.toString()"></code></pre>
                               </div>
                             </ng-container>
 
                             <ng-container *ngSwitchDefault>
                               <div fxLayout="column" >
                                 <div fxLayout="row" class="code_block">
-                                  <pre fxFlex="95" fxFlex.lt-md="90"><code [highlight]="test.htmlCode.toString()"></code></pre>
+                                  <pre fxFlex="95" fxFlex.lt-md="90"><code tabindex="0" [highlight]="test.htmlCode.toString()"></code></pre>
                                   <button mat-icon-button fxFlex (click)="openCodeDialog(test.htmlCode)"
                                           matTooltip="{{'EVALUATION_PAGE.report.result_code' | translate}}" aria-label="Open code dialog button">
                                     <mat-icon class="eyeicon" aria-hidden="true">visibility</mat-icon>
@@ -547,14 +547,14 @@
 
                             <ng-container *ngSwitchCase="'CSS Technique'">
                               <div fxLayout="row" class="code_block" >
-                                <pre fxFlex><code [highlight]="test.htmlCode.toString()"></code></pre>
+                                <pre fxFlex><code tabindex="0" [highlight]="test.htmlCode.toString()"></code></pre>
                               </div>
                             </ng-container>
 
                             <ng-container *ngSwitchDefault>
                               <div fxLayout="column" >
                                 <div fxLayout="row" class="code_block">
-                                  <pre fxFlex="95" fxFlex.lt-md="90"><code [highlight]="test.htmlCode.toString()"></code></pre>
+                                  <pre fxFlex="95" fxFlex.lt-md="90"><code tabindex="0" [highlight]="test.htmlCode.toString()"></code></pre>
                                   <button mat-icon-button fxFlex (click)="openCodeDialog(test.htmlCode)"
                                           matTooltip="{{'EVALUATION_PAGE.report.result_code' | translate}}" aria-label="Open code dialog button">
                                     <mat-icon class="eyeicon" aria-hidden="true">visibility</mat-icon>
