--- a/src/app/pages/evaluation-page/evaluation-page.component.html
+++ b/src/app/pages/evaluation-page/evaluation-page.component.html
@@ -454,11 +454,11 @@
                     <ng-container *ngFor="let test of rule['failedResults']; trackBy: trackByIndex">
                       <mat-card [ngClass]="test.verdict" fxLayout="column" class="line_breaker">
                         <mat-card-header>
-                          <mat-card-title [class.with-code]="test.htmlCode">
+                          <mat-card-title [class.with-code]="test.elements || test.htmlCode">
                             {{ test.description }}
                           </mat-card-title>
                         </mat-card-header>
-                        <mat-card-content fxLayoutAlign="start center" *ngIf="test.htmlCode"
+                        <mat-card-content fxLayoutAlign="start center" *ngIf="test.elements || test.htmlCode"
                                           fxLayout="row">
                           <ng-container [ngSwitch]="rule['type']">
 
@@ -518,11 +518,11 @@
                     <ng-container *ngFor="let test of rule['warningResults']; trackBy: trackByIndex">
                       <mat-card [ngClass]="test.verdict" fxLayout="column" class="line_breaker">
                         <mat-card-header>
-                          <mat-card-title [class.with-code]="test.htmlCode">
+                          <mat-card-title [class.with-code]="test.elements || test.htmlCode">
                             {{ test.description }}
                           </mat-card-title>
                         </mat-card-header>
-                        <mat-card-content fxLayoutAlign="start center" *ngIf="test.htmlCode"
+                        <mat-card-content fxLayoutAlign="start center" *ngIf="test.elements || test.htmlCode"
                                           fxLayout="row" fxLayoutGap="2" >
                           <ng-container [ngSwitch]="rule['type']">
 
@@ -582,11 +582,11 @@
                     <ng-container *ngFor="let test of rule['inapplicableResults']; trackBy: trackByIndex">
                       <mat-card [ngClass]="test.verdict" fxLayout="column" class="line_breaker">
                         <mat-card-header>
-                          <mat-card-title [class.with-code]="test.htmlCode">
+                          <mat-card-title [class.with-code]="test.elements || test.htmlCode">
                             {{ test.description }}
                           </mat-card-title>
                         </mat-card-header>
-                        <mat-card-content fxLayoutAlign="start center" *ngIf="test.htmlCode"
+                        <mat-card-content fxLayoutAlign="start center" *ngIf="test.elements || test.htmlCode"
                                           fxLayout="row" fxLayoutGap="2" >
                           <ng-container [ngSwitch]="rule['type']">
 
