replaced html and css techniques with wcag techniques

--- a/src/app/evaluation/url-input/url-input.component.html
+++ b/src/app/evaluation/url-input/url-input.component.html
@@ -44,8 +44,8 @@
   </div>
   <div fxLayout="column wrap" class="div-checkbox">
     <mat-checkbox [(ngModel)]="executeACT" (change)="updateCheckboxStatus()">ACT Rules</mat-checkbox>
-    <mat-checkbox [(ngModel)]="executeHTML" (change)="updateCheckboxStatus()">HTML Techniques</mat-checkbox>
-    <mat-checkbox [(ngModel)]="executeCSS" (change)="updateCheckboxStatus()">CSS Techniques</mat-checkbox>
+    <mat-checkbox [(ngModel)]="executeWCAG" (change)="updateCheckboxStatus()">WCAG Techniques</mat-checkbox>
+    <!--mat-checkbox [(ngModel)]="executeCSS" (change)="updateCheckboxStatus()">CSS Techniques</mat-checkbox-->
     <!--mat-checkbox [(ngModel)]="executeBP" (change)="updateCheckboxStatus()">Best Practices</mat-checkbox-->
   </div>
 </div>
